--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,62 @@
-/*# sourceMappingURL=index.css.map */
+.card {
+  width: 200px;
+  height: 300px;
+  perspective: 1000px;
+  transition: transform 0.5s;
+}
+.card .card-inner {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+}
+.card .card-inner .front,
+.card .card-inner .back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: white;
+}
+.card .card-inner .front {
+  background-color: #3498db;
+}
+.card .card-inner .back {
+  background-color: #2ecc71;
+  transform: rotateY(180deg);
+}
+.card:hover .card-inner {
+  transform: rotateY(180deg);
+}
+
+.container {
+  margin: 0;
+  display: grid;
+  grid-template-areas: "header" "main" "footer";
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+}
+.container header {
+  display: flex;
+  grid-area: header;
+  flex-direction: column;
+}
+.container header .logos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container header .navli {
+  display: flex;
+  list-style: none;
+  justify-content: space-evenly;
+}
+.container main {
+  grid-area: main;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}/*# sourceMappingURL=index.css.map */
