--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,16 @@
 }
 .card .card-inner .front {
   background-color: #3498db;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.card .card-inner .front img {
+  padding: 25px;
+  width: 60%;
+}
+.card .card-inner .front .card-body {
+  padding-top: 60px;
 }
 .card .card-inner .back {
   background-color: #2ecc71;
@@ -38,7 +48,10 @@
   display: grid;
   grid-template-areas: "header" "main" "footer";
   grid-template-rows: auto 1fr auto;
+  grid-template-columns: 0.5fr;
   min-height: 100vh;
+  justify-content: center;
+  justify-items: center;
 }
 .container header {
   display: flex;
@@ -57,6 +70,26 @@
 }
 .container main {
   grid-area: main;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container main .section1,
+.container main .section2 {
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container footer {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.container footer .footer-div {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }/*# sourceMappingURL=index.css.map */
