--- a/css/index.scss
+++ b/css/index.scss
@@ -33,6 +33,18 @@ $cardHeight: 300px;
         // Estilo de la cara frontal
         .front {
             background-color: #3498db;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            img {
+                padding: 25px;
+                width: 60%;
+            }
+
+            .card-body {
+                padding-top: 60px;
+            }
         }
 
         // Estilo de la cara trasera
@@ -59,7 +71,10 @@ $cardHeight: 300px;
         "main"
         "footer";
     grid-template-rows: auto 1fr auto;
+    grid-template-columns: 0.5fr;
     min-height: 100vh;
+    justify-content: center;
+    justify-items: center;
 
     header {
         display: flex;
@@ -81,7 +96,31 @@ $cardHeight: 300px;
 
     main {
         grid-area: main;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .section1,
+        .section2 {
+            width: 100%;
+            max-width: 600px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+        }
+    }
+
+    footer {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
+        .footer-div {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
     }
 }
