--- a/css/index.css
+++ b/css/index.css
@@ -44,35 +44,56 @@
 }
 
 .container {
+  padding: 0px;
+  background-color: #E5E5E3;
   margin: 0;
+  height: 100%;
   display: grid;
   grid-template-areas: "header" "main" "footer";
-  grid-template-rows: auto 1fr auto;
-  grid-template-columns: 0.5fr;
+  grid-template-rows: fr 2fr 0.2fr;
+  grid-template-columns: 1fr;
   min-height: 100vh;
   justify-content: center;
   justify-items: center;
 }
 .container header {
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  width: 100%;
   display: flex;
   grid-area: header;
   flex-direction: column;
 }
+.container header .sin-color {
+  text-decoration: none;
+  color: #223064;
+}
 .container header .logos {
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .container header .navli {
+  padding-top: 10px;
   display: flex;
   list-style: none;
   justify-content: space-evenly;
 }
 .container main {
+  width: 100%;
   grid-area: main;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.container main .section1 {
+  padding-top: 10px;
+  background-color: #223064;
+}
+.container main .section1 {
+  height: 300px;
 }
 .container main .section1,
 .container main .section2 {
