--- a/css/index.scss
+++ b/css/index.scss
@@ -64,30 +64,43 @@ $cardHeight: 300px;
 
 // Estilos generales
 .container {
+
+    padding: 0px;
+    background-color: #E5E5E3;
     margin: 0;
+    height: 100%;
     display: grid;
     grid-template-areas:
         "header"
         "main"
         "footer";
-    grid-template-rows: auto 1fr auto;
-    grid-template-columns: 0.5fr;
+    grid-template-rows: fr 2fr 0.2fr;
+    grid-template-columns: 1fr;
     min-height: 100vh;
     justify-content: center;
     justify-items: center;
 
     header {
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 600;
+        width: 100%;
         display: flex;
         grid-area: header;
         flex-direction: column;
-
+        .sin-color{
+            text-decoration: none;
+            color: #223064;
+        }
         .logos {
+            height: 60px;
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
         .navli {
+            padding-top: 10px;
             display: flex;
             list-style: none;
             justify-content: space-evenly;
@@ -95,11 +108,20 @@ $cardHeight: 300px;
     }
 
     main {
+       
+        width: 100%;
         grid-area: main;
         display: flex;
         flex-direction: column;
         align-items: center;
-
+        .section1{
+            padding-top: 10px;
+            background-color: #223064
+            ;
+        }
+        .section1{
+            height: 300px;
+        }
         .section1,
         .section2 {
             width: 100%;
