--- a/css/index.css
+++ b/css/index.css
@@ -1,48 +1,3 @@
-.card {
-  width: 200px;
-  height: 300px;
-  perspective: 1000px;
-  transition: transform 0.5s;
-}
-.card .card-inner {
-  width: 100%;
-  height: 100%;
-  transform-style: preserve-3d;
-  transition: transform 0.5s;
-}
-.card .card-inner .front,
-.card .card-inner .back {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  backface-visibility: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px;
-  color: white;
-}
-.card .card-inner .front {
-  background-color: #3498db;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.card .card-inner .front img {
-  padding: 25px;
-  width: 60%;
-}
-.card .card-inner .front .card-body {
-  padding-top: 60px;
-}
-.card .card-inner .back {
-  background-color: #2ecc71;
-  transform: rotateY(180deg);
-}
-.card:hover .card-inner {
-  transform: rotateY(180deg);
-}
-
 .container {
   padding: 0px;
   background-color: #E5E5E3;
@@ -91,18 +46,70 @@
 .container main .section1 {
   padding-top: 10px;
   background-color: #223064;
-}
-.container main .section1 {
   height: 300px;
+}
+.container main .section2 .card {
+  width: 200px;
+  height: 300px;
+  perspective: 1000px;
+  transition: transform 0.5s;
+}
+.container main .section2 .card .card-inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+  margin: 0px;
+}
+.container main .section2 .card .card-inner .front,
+.container main .section2 .card .card-inner .back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: white;
+}
+.container main .section2 .card .card-inner .front {
+  background-color: #3498db;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container main .section2 .card .card-inner .front img {
+  padding: 25px;
+  width: 60%;
+}
+.container main .section2 .card .card-inner .front .card-body {
+  padding-top: 60px;
+}
+.container main .section2 .card .card-inner .back {
+  background-color: #2ecc71;
+  transform: rotateY(180deg);
+}
+.container main .section2 .card:hover .card-inner {
+  transform: rotateY(180deg);
 }
 .container main .section1,
 .container main .section2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
   width: 100%;
   max-width: 600px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.container main .section1 div,
+.container main .section2 div {
+  margin: 10px;
 }
 .container footer {
   display: flex;
