--- a/css/index.scss
+++ b/css/index.scss
@@ -2,65 +2,6 @@
 $cardWidth: 200px;
 $cardHeight: 300px;
 
-// Estilos base de la tarjeta
-.card {
-    width: $cardWidth;
-    height: $cardHeight;
-    perspective: 1000px;
-    transition: transform 0.5s;
-
-    // Contenedor que envuelve ambas caras
-    .card-inner {
-        width: 100%;
-        height: 100%;
-        transform-style: preserve-3d; // Asegura que los hijos conserven su posición en 3D
-        transition: transform 0.5s;
-
-        // Estilo del contenido frontal de la tarjeta
-        .front,
-        .back {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            backface-visibility: hidden;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 20px;
-            color: white;
-        }
-
-        // Estilo de la cara frontal
-        .front {
-            background-color: #3498db;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            img {
-                padding: 25px;
-                width: 60%;
-            }
-
-            .card-body {
-                padding-top: 60px;
-            }
-        }
-
-        // Estilo de la cara trasera
-        .back {
-            background-color: #2ecc71;
-            transform: rotateY(180deg);
-        }
-    }
-
-    // Estilo de la tarjeta al pasar el mouse
-    &:hover {
-        .card-inner {
-            transform: rotateY(180deg);
-        }
-    }
-}
 
 // Estilos generales
 .container {
@@ -88,10 +29,12 @@ $cardHeight: 300px;
         display: flex;
         grid-area: header;
         flex-direction: column;
-        .sin-color{
+
+        .sin-color {
             text-decoration: none;
             color: #223064;
         }
+
         .logos {
             height: 60px;
             display: flex;
@@ -108,29 +51,98 @@ $cardHeight: 300px;
     }
 
     main {
-       
+
         width: 100%;
         grid-area: main;
         display: flex;
         flex-direction: column;
         align-items: center;
-        .section1{
+
+        .section1 {
             padding-top: 10px;
-            background-color: #223064
-            ;
-        }
-        .section1{
+            background-color: #223064;
             height: 300px;
+
+            
+
+        }
+        .section2{
+            .card {
+                width: $cardWidth;
+                height: $cardHeight;
+                perspective: 1000px;
+                transition: transform 0.5s;
+                // Contenedor que envuelve ambas caras
+                .card-inner {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100%;
+                    height: 100%;
+                    transform-style: preserve-3d; // Asegura que los hijos conserven su posición en 3D
+                    transition: transform 0.5s;
+                    margin: 0px;
+                    
+            
+                    // Estilo del contenido frontal de la tarjeta
+                    .front,
+                    .back {
+                        width: 100%;
+                        height: 100%;
+                        position: absolute;
+                        backface-visibility: hidden;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        font-size: 20px;
+                        color: white;
+                    }
+            
+                    // Estilo de la cara frontal
+                    .front {
+                        background-color: #3498db;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+            
+                        img {
+                            padding: 25px;
+                            width: 60%;
+                        }
+            
+                        .card-body {
+                            padding-top: 60px;
+                        }
+                    }
+            
+                    // Estilo de la cara trasera
+                    .back {
+                        background-color: #2ecc71;
+                        transform: rotateY(180deg);
+                    }
+                }
+            
+                // Estilo de la tarjeta al pasar el mouse
+                &:hover {
+                    .card-inner {
+                        transform: rotateY(180deg);
+                    }
+                }
+            }
         }
         .section1,
         .section2 {
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 600;
             width: 100%;
             max-width: 600px;
             margin: 0 auto;
             display: flex;
             flex-direction: column;
             align-items: center;
-
+                div {
+                    margin: 10px;
+                }
         }
     }
 
