--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 .container {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
   padding: 0px;
-  background-color: #E5E5E3;
   margin: 0;
   height: 100%;
   display: grid;
@@ -17,8 +18,16 @@
   font-weight: 600;
   width: 100%;
   display: flex;
+  align-items: center;
   grid-area: header;
   flex-direction: column;
+  background-color: #E5E5E3;
+}
+.container header .navbar-toggler-icon {
+  margin-bottom: 2px;
+}
+.container header .nav-item {
+  color: #223064;
 }
 .container header .sin-color {
   text-decoration: none;
@@ -48,6 +57,45 @@
   background-color: #223064;
   height: 300px;
 }
+.container main .section1 .no-margin {
+  margin: 0px;
+  margin-top: 5px;
+}
+.container main .section1 .no-margin p {
+  color: #99badd;
+}
+.container main .section1 .radius {
+  border-radius: 8px;
+}
+.container main .section1 div .button-opera {
+  height: 35px;
+  width: 120px;
+  border: 1px;
+  background-color: #223064;
+  border-radius: 8px;
+  border-color: #99badd;
+  border-style: solid;
+}
+.container main .section1 div .button-opera a {
+  text-decoration: none;
+  color: #99badd;
+}
+.container main .section1 .button-abrir {
+  height: 35px;
+  width: 120px;
+  background-color: #99badd;
+  border-radius: 8px;
+  border: 0.000000001px;
+  border-style: solid;
+  border-color: #99badd;
+}
+.container main .section1 .button-abrir a {
+  text-decoration: none;
+  color: #223064;
+}
+.container main .section2 h1 {
+  color: #223064;
+}
 .container main .section2 .card {
   width: 200px;
   height: 300px;
@@ -75,9 +123,9 @@
   justify-content: center;
   font-size: 20px;
   color: white;
+  background-color: #223064;
 }
 .container main .section2 .card .card-inner .front {
-  background-color: #3498db;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -90,7 +138,7 @@
   padding-top: 60px;
 }
 .container main .section2 .card .card-inner .back {
-  background-color: #2ecc71;
+  background-color: #99badd;
   transform: rotateY(180deg);
 }
 .container main .section2 .card:hover .card-inner {
@@ -112,9 +160,13 @@
   margin: 10px;
 }
 .container footer {
+  padding: 5px;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
+  background-color: black;
+  color: #E5E5E3;
 }
 .container footer .footer-div {
   display: flex;
