--- a/css/index.scss
+++ b/css/index.scss
@@ -5,9 +5,10 @@ $cardHeight: 300px;
 
 // Estilos generales
 .container {
-
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
     padding: 0px;
-    background-color: #E5E5E3;
+
     margin: 0;
     height: 100%;
     display: grid;
@@ -27,8 +28,19 @@ $cardHeight: 300px;
         font-weight: 600;
         width: 100%;
         display: flex;
+        align-items: center;
         grid-area: header;
         flex-direction: column;
+        background-color: #E5E5E3;
+
+        .navbar-toggler-icon {
+            margin-bottom: 2px;
+
+        }
+
+        .nav-item {
+            color: #223064;
+        }
 
         .sin-color {
             text-decoration: none;
@@ -63,15 +75,71 @@ $cardHeight: 300px;
             background-color: #223064;
             height: 300px;
 
-            
+            .no-margin {
+                margin: 0px;
+                margin-top: 5px;
+
+                p {
+                    color: #99badd;
+                }
+            }
+
+            .radius {
+                border-radius: 8px;
+            }
+
+            div {
+                .button-opera {
+                    height: 35px;
+                    width: 120px;
+                    border: 1px;
+                    background-color: #223064;
+                    border-radius: 8px;
+                    border-color: #99badd;
+                    border-style: solid;
+
+                    a {
+                        text-decoration: none;
+                        color: #99badd;
+
+                    }
+                }
+            }
+
+            .button-abrir {
+                height: 35px;
+                width: 120px;
+                background-color: #99badd;
+                border-radius: 8px;
+                border: 0.000000001px;
+                border-style: solid;
+                border-color: #99badd;
+
+                a {
+                    text-decoration: none;
+                    color: #223064;
+
+                }
+            }
+
+
+
+
 
         }
-        .section2{
+
+        .section2 {
+            h1 {
+                color: #223064;
+            }
+
             .card {
                 width: $cardWidth;
                 height: $cardHeight;
                 perspective: 1000px;
                 transition: transform 0.5s;
+
+
                 // Contenedor que envuelve ambas caras
                 .card-inner {
                     display: flex;
@@ -82,8 +150,9 @@ $cardHeight: 300px;
                     transform-style: preserve-3d; // Asegura que los hijos conserven su posición en 3D
                     transition: transform 0.5s;
                     margin: 0px;
-                    
-            
+
+
+
                     // Estilo del contenido frontal de la tarjeta
                     .front,
                     .back {
@@ -96,32 +165,33 @@ $cardHeight: 300px;
                         justify-content: center;
                         font-size: 20px;
                         color: white;
+                        background-color: #223064;
                     }
-            
+
                     // Estilo de la cara frontal
                     .front {
-                        background-color: #3498db;
+
                         display: flex;
                         flex-direction: column;
                         align-items: center;
-            
+
                         img {
                             padding: 25px;
                             width: 60%;
                         }
-            
+
                         .card-body {
                             padding-top: 60px;
                         }
                     }
-            
+
                     // Estilo de la cara trasera
                     .back {
-                        background-color: #2ecc71;
+                        background-color: #99badd;
                         transform: rotateY(180deg);
                     }
                 }
-            
+
                 // Estilo de la tarjeta al pasar el mouse
                 &:hover {
                     .card-inner {
@@ -130,6 +200,7 @@ $cardHeight: 300px;
                 }
             }
         }
+
         .section1,
         .section2 {
             font-family: 'Montserrat', sans-serif;
@@ -140,16 +211,21 @@ $cardHeight: 300px;
             display: flex;
             flex-direction: column;
             align-items: center;
-                div {
-                    margin: 10px;
-                }
+
+            div {
+                margin: 10px;
+            }
         }
     }
 
     footer {
+        padding: 5px;
+        width: 100%;
         display: flex;
         align-items: center;
         flex-direction: column;
+        background-color: black;
+        color: #E5E5E3;
 
         .footer-div {
             display: flex;
