--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .container {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
@@ -52,6 +53,16 @@
   flex-direction: column;
   align-items: center;
 }
+.container main #whatsapp-link {
+  position: fixed;
+  bottom: 20px; /* Ajusta la posición según tus necesidades */
+  right: 20px; /* Ajusta la posición según tus necesidades */
+  padding: 10px;
+  background-color: green; /* Cambia el color de fondo según tus preferencias */
+  color: white; /* Cambia el color del texto según tus preferencias */
+  text-decoration: none;
+  border-radius: 5px;
+}
 .container main .section1 {
   padding-top: 10px;
   background-color: #223064;
@@ -101,6 +112,7 @@
   height: 300px;
   perspective: 1000px;
   transition: transform 0.5s;
+  border: none;
 }
 .container main .section2 .card .card-inner {
   display: flex;
@@ -126,6 +138,7 @@
   background-color: #223064;
 }
 .container main .section2 .card .card-inner .front {
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -140,6 +153,7 @@
 .container main .section2 .card .card-inner .back {
   background-color: #99badd;
   transform: rotateY(180deg);
+  border-radius: 8px;
 }
 .container main .section2 .card:hover .card-inner {
   transform: rotateY(180deg);
