--- a/css/index.scss
+++ b/css/index.scss
@@ -69,6 +69,16 @@ $cardHeight: 300px;
         display: flex;
         flex-direction: column;
         align-items: center;
+        #whatsapp-link {
+            position: fixed;
+            bottom: 20px; /* Ajusta la posición según tus necesidades */
+            right: 20px; /* Ajusta la posición según tus necesidades */
+            padding: 10px;
+            background-color: green; /* Cambia el color de fondo según tus preferencias */
+            color: white; /* Cambia el color del texto según tus preferencias */
+            text-decoration: none;
+            border-radius: 5px;
+        }
 
         .section1 {
             padding-top: 10px;
@@ -138,7 +148,7 @@ $cardHeight: 300px;
                 height: $cardHeight;
                 perspective: 1000px;
                 transition: transform 0.5s;
-
+                border: none;
 
                 // Contenedor que envuelve ambas caras
                 .card-inner {
@@ -150,7 +160,7 @@ $cardHeight: 300px;
                     transform-style: preserve-3d; // Asegura que los hijos conserven su posición en 3D
                     transition: transform 0.5s;
                     margin: 0px;
-
+                    
 
 
                     // Estilo del contenido frontal de la tarjeta
@@ -166,11 +176,12 @@ $cardHeight: 300px;
                         font-size: 20px;
                         color: white;
                         background-color: #223064;
+                        
                     }
 
                     // Estilo de la cara frontal
                     .front {
-
+                        border-radius: 8px;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
@@ -182,6 +193,7 @@ $cardHeight: 300px;
 
                         .card-body {
                             padding-top: 60px;
+                           
                         }
                     }
 
@@ -189,6 +201,7 @@ $cardHeight: 300px;
                     .back {
                         background-color: #99badd;
                         transform: rotateY(180deg);
+                        border-radius: 8px;
                     }
                 }
 
