--- a/css/index.scss
+++ b/css/index.scss
@@ -8,7 +8,7 @@ $cardHeight: 300px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     padding: 0px;
-
+    width: 100%;
     margin: 0;
     height: 100%;
     display: grid;
@@ -32,6 +32,7 @@ $cardHeight: 300px;
         grid-area: header;
         flex-direction: column;
         background-color: #E5E5E3;
+        z-index: 2;
 
         .navbar-toggler-icon {
             margin-bottom: 2px;
@@ -52,13 +53,26 @@ $cardHeight: 300px;
             display: flex;
             justify-content: center;
             align-items: center;
-        }
 
-        .navli {
-            padding-top: 10px;
-            display: flex;
-            list-style: none;
-            justify-content: space-evenly;
+            a {
+                .off-screen {
+                    transform: translateX(-100vw);
+
+                }
+
+                .animate {
+                    transform: translateX(0);
+                    transition: transform 1s ease;
+                }
+            }
+
+
+            .navli {
+                padding-top: 10px;
+                display: flex;
+                list-style: none;
+                justify-content: space-evenly;
+            }
         }
     }
 
@@ -69,21 +83,26 @@ $cardHeight: 300px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        #whatsapp-link {
-            position: fixed;
-            bottom: 20px; /* Ajusta la posición según tus necesidades */
-            right: 20px; /* Ajusta la posición según tus necesidades */
-            padding: 10px;
-            background-color: green; /* Cambia el color de fondo según tus preferencias */
-            color: white; /* Cambia el color del texto según tus preferencias */
-            text-decoration: none;
-            border-radius: 5px;
+        z-index: 1;
+
+        .radius,
+        .no-margin {
+            opacity: 0;
+            transform: translateY(50px);
+            transition: opacity 0.8s ease, transform 0.8s ease;
+        }
+
+        .radius.animate,
+        .no-margin.animate {
+            opacity: 1;
+            transform: translateY(0);
         }
 
         .section1 {
             padding-top: 10px;
             background-color: #223064;
             height: 300px;
+
 
             .no-margin {
                 margin: 0px;
@@ -132,6 +151,21 @@ $cardHeight: 300px;
                 }
             }
 
+            .button-opera,
+            .button-abrir {
+                opacity: 0;
+                /* Hacer los botones inicialmente transparentes */
+                transform: translateY(-50px);
+                /* Mover los botones hacia arriba */
+                transition: opacity 0.8s ease, transform 0.8s ease;
+            }
+
+            .button-opera.animate,
+            .button-abrir.animate {
+                opacity: 1;
+                transform: translateY(0);
+            }
+
 
 
 
@@ -139,6 +173,8 @@ $cardHeight: 300px;
         }
 
         .section2 {
+            padding-top: 10px;
+
             h1 {
                 color: #223064;
             }
@@ -160,7 +196,7 @@ $cardHeight: 300px;
                     transform-style: preserve-3d; // Asegura que los hijos conserven su posición en 3D
                     transition: transform 0.5s;
                     margin: 0px;
-                    
+
 
 
                     // Estilo del contenido frontal de la tarjeta
@@ -176,7 +212,7 @@ $cardHeight: 300px;
                         font-size: 20px;
                         color: white;
                         background-color: #223064;
-                        
+
                     }
 
                     // Estilo de la cara frontal
@@ -193,7 +229,7 @@ $cardHeight: 300px;
 
                         .card-body {
                             padding-top: 60px;
-                           
+
                         }
                     }
 
@@ -246,4 +282,5 @@ $cardHeight: 300px;
             flex-direction: column;
         }
     }
+
 }
