--- a/css/index.css
+++ b/css/index.css
@@ -117,9 +117,7 @@
 .container main .section1 .button-opera,
 .container main .section1 .button-abrir {
   opacity: 0;
-  /* Hacer los botones inicialmente transparentes */
   transform: translateY(-50px);
-  /* Mover los botones hacia arriba */
   transition: opacity 0.8s ease, transform 0.8s ease;
 }
 .container main .section1 .button-opera.animate,
@@ -132,6 +130,11 @@
 }
 .container main .section2 h1 {
   color: #223064;
+  transform: translateX(-50px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+.container main .section2 h1.animate {
+  transform: translateX(50px);
 }
 .container main .section2 .card {
   width: 200px;
